fix ffox layout bug, built-in

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -160,7 +160,7 @@ body.sidebar-footer {
     > div, > article {
       padding-top: $pad-medium/2;
       padding-bottom: $pad-medium/2;
-      float: left;
+      /*float: left;*/
     }
   }
   aside.sidebar {
